# project-ult-main-core

./: .gitignore  .importlinter  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: PROGRESS.md  TASK_BREAKDOWN.md  main-core.project-doc.md
scripts/: check_boundaries.sh
src/main_core/: __init__.py  public.py
src/main_core/adapters/: __init__.py  graph_engine.py
src/main_core/common/: __init__.py  contexts.py  errors.py  json_like.py  types.py
src/main_core/l1_l2_basis/: _README.md  __init__.py  errors.py  models.py  ports.py  readers.py
src/main_core/l3_features/: _README.md  __init__.py  builder.py  candidate_signals.py  errors.py  feature_math.py  graph_adapter.py  multiplier_store.py  multiplier_validation.py  weight_api.py
src/main_core/l4_world_state/: _README.md  __init__.py  graph_adapter.py  reasoner_port.py  rules.py  service.py  stubs.py
src/main_core/l5_universe/: _README.md  __init__.py  freezer.py  mvp20.py  rules.py  service.py  types.py
src/main_core/l6_alpha/: _README.md  __init__.py  ab_runner.py  errors.py  fallback.py  multi_agent_analyzer.py  reasoner_port.py  service.py  single_prompt_analyzer.py  stubs.py
src/main_core/l7_recommendation/: _README.md  __init__.py  constraints.py  override.py  rules.py  service.py  stubs.py
src/main_core/l8_publish/: _README.md  (+10 more)
tests/: __init__.py  conftest.py  test_package_boundaries.py
tests/adapters/: test_graph_engine_regime_reader.py
tests/boundary/: test_red_lines.py
tests/contract/: test_contracts_alignment.py  test_formal_object_contract.py
tests/integration/: test_graph_readonly_consumption.py  test_graph_snapshot_round_trip_preflight.py  test_l1_l3_feature_flow.py  test_l6_multi_agent_enriched_inputs.py  test_layer_b_candidate_signals.py  test_new_data_interface_vertical_slice.py  test_pure_market_closed_loop.py
tests/l1_l2_basis/: __init__.py  conftest.py  test_l1_smoke.py  test_models.py  test_readers.py
tests/l3_features/: __init__.py  conftest.py  test_builder.py  test_candidate_signals.py  test_graph_adapter.py  test_multiplier_store.py  test_weight_api.py
tests/l4_world_state/: __init__.py  conftest.py  test_boundaries.py  test_graph_adapter.py  test_reasoner_port.py  test_rules.py  test_service.py
tests/l5_universe/: __init__.py  test_freezer.py  test_mvp20.py  test_rules.py  test_service.py
tests/l6_alpha/: __init__.py  conftest.py  test_ab_runner.py  test_fallback.py  test_multi_agent_analyzer.py  test_reasoner_port.py  test_service.py  test_single_prompt_analyzer.py
tests/l7_recommendation/: __init__.py  test_constraints.py  test_override.py  test_service.py
tests/l8_publish/: __init__.py  test_assembler.py  test_dashboard.py  test_dashboard_report_publish_integration.py  test_manifest.py  test_publish_integration.py  test_report.py
tests/protocols/: __init__.py  test_analyzer_interface.py  test_constraint_provider.py  test_graph_engine_contract.py  test_world_state_policy.py
tests/regression/: test_with_shared_fixtures.py
tests/schemas/: __init__.py  test_alpha.py  test_dashboard_report.py  test_feature_bundle.py  test_pool.py  test_publish.py  test_recommendation.py  test_world_state.py
tests/smoke/: test_public_smoke.py
tests/unit/: test_public_entrypoints.py
(+16 files in other folders)
