[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-main-core"
version = "0.1.1"
description = "L1-L8 business chain + shared state + formal publish for project-ult."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
# Pure-pip dev tools — offline-first per SUBPROJECT_TESTING_STANDARD.md §2.2.
# Used by test-fast / smoke CI lanes. Never includes git+URL deps.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "import-linter>=2.0",
]
# Cross-repo schema source-of-truth pin. Required by tests/contract to
# verify that main_core runtime models round-trip through the contracts
# envelope (formal-object payload). Kept as a separate extra so test-fast
# / smoke CI lanes stay offline-first.
contracts-schemas = [
    "project-ult-contracts @ git+https://github.com/shenfanjie5-bit/project-ult-contracts.git@v0.1.3",
]
# Shared regression fixtures bundled with project-ult-audit-eval.
# Pinned to v0.2.4 (project-wide canonical_entity_id format reconciliation:
# every shared case now uses the dot form ENT_STOCK_<symbol>.<exchange> to
# match the live entity-registry runtime generate_stock_entity_id rule).
shared-fixtures = [
    "project-ult-audit-eval @ git+https://github.com/shenfanjie5-bit/project-ult-audit-eval.git@v0.2.4",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
